# GSCAPI

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/route/: get_sts_credentials.py
config/: config.py
module/: jwt_create.py
module/.config/: config.ini  config.json  config.yaml  seongi_jwt
