[tool.poetry]
name = "gscapi"
version = "0.1.0"
description = ""
authors = ["hongsre <hsg9156@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyjwt = "^2.8.0"
boto3 = "^1.34.108"
requests = "^2.31.0"
configparser = "^7.0.0"
cryptography = "^42.0.7"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
